--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -1,46 +1,163 @@
-/* Navbar Container */
-.navbarsection {
-  width: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #fff; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-
-}
-.header {
+/* Navbar Styles */
+.navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  width: 100%;
   padding: 10px 20px;
+  background-color: white;
+
 }
 
-.logodiv {
-  flex: 1;
-}
-
-
-.navlist {
-  display: flex;
+.main-menu {
   list-style: none;
+  display: flex;
+align-items: flex-end;
+  margin-left: 30rem;
+  padding: 0;
+}
+
+.main-menu li {
+  margin: 0 15px;
+  position: relative;
+}
+
+.main-menu a {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+.main-menu a:hover{
+  color: #0056b3;
+}
+
+.main-menu span {
+  color: black;
+  text-decoration: none;
+  font-weight: bold;
+}
+.main-menu span:hover{
+  color: #0056b3;
+}
+
+/* Dropdown Styles */
+/* Dropdown Container */
+.services-dropdown {
+ position: absolute;
+ top: 30px;
+ left: 0;
+  width: 800px;
+  height: 400px;
+  background-color: white;
+  display: flex;
+  padding: 20px;  
+  z-index: 1000;
+}
+
+.services-page {
+  display: flex;
+  justify-content: flex-start;
   gap: 20px;
 }
 
-.navitem {
+/* Services List */
+.services-container{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+.services-list {
+  padding: 20px;
+  flex-grow: 1;
+}
+
+.services-list h3 {
+  margin-top: 0;
+ color: #0056b3;
+  font-size: 20px;
+}
+
+.services-list h4 {
+  color: black;
+  margin: 10px 0;
+  font-size: 16px;
+}
+
+.services-list ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.services-list li{
+  font-size: 12px;
+  margin: 5px 0;
+  font-family: 'Lucida Sans';
+}
+.services-list a{
+  color: #5f5050;
+}
+
+.services-list a:hover{
+  color: #0056b3;
+}
+.services-list ul {
+  margin: 5px 0;
+  font-size: 14px;
+  color: #333;
+}
+
+.career-link {
+  margin-top: 15px;
+  color: #20201e;
+}
+
+.career-link a {
+  color: #4CAF50;
+  text-decoration: none;
+}
+
+.career-link a:hover {
+  text-decoration: underline;
+}
+
+/* Commitment Section */
+.commitment-section {
+  width: 150px;
+  text-align: center;
+}
+
+.commitment-section h3 {
+  color: #050505;
+  font-size: 18px;
+}
+
+.commitment-section p {
+  font-size: 14px;
+  color: #333;
+}
+
+.image-placeholder img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  margin-bottom: 10px;
+}
+
+/* Navbar Buttons */
+.navbar-actions .btn {
+  background-color: #0056b3;
+  color: #fff;
+  padding: 8px 15px;
+  margin-left: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
   font-size: 14px;
 }
 
-.navitem a {
-  text-decoration: none;
-  color: #333; 
-  font-weight: bold;
-}
-
-.navitem a:hover {
-  color: #4571a0; 
+.navbar-actions .btn:hover {
+  background-color: #5645e9;
 }
 
 
-body {
-  padding-top: 60px; 
-}
