--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -77,6 +77,29 @@
 }
 
 
+.footer-right ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.footer-right li {
+    font-size: 12px;
+    margin: 5px 0;
+    font-family: 'Lucida Sans';
+}
+
+.footer-right a {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.footer-right ul {
+    margin: 5px 0;
+    font-size: 14px;
+    color: #333;
+}
+
 .footer-bottom {
     display: flex;
     justify-content: space-around;
@@ -90,15 +113,17 @@
     max-width: 200px;
 }
 
-.contact-icon {
+.contacts-icon {
     margin-top: 20px;
     font-size: 30px;
     margin-right: 5px;
     margin-bottom: 20px;
 }
-.contact-info p{
+
+.contact-info p {
     font-size: 12px;
 }
+
 /* Responsive Design */
 @media (max-width: 768px) {
     .footer-top {
