--- a/src/style/frontend.css
+++ b/src/style/frontend.css
@@ -696,7 +696,8 @@
 }
 
 
-.react-icon {
+.rr-icon {
+    color: #0056b3;
     font-size: 36px;
 }
 
@@ -843,7 +844,7 @@
 
 .next__content h1 {
     font-size: 2.5rem;
-    color: #5b5d61;
+    color: #333;
     margin-bottom: 20px;
 }
 
@@ -934,37 +935,150 @@
     color: #666;
 }
 
-/* Image.module.css */
-.n-image img {
-    width: 30rem;
-    height: 20rem;
-    margin: 5% auto;
-    display: flex;
-    justify-content: center;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-}
-
 .next-con {
-    padding: 20px;
+    margin: 4% auto;
     justify-content: center;
-    border-radius: 8px;
-    margin: 20px auto;
-    margin-bottom: 4%;
+    text-align: center;
+    align-items: center;
 }
 
 .next-con h1 {
-    font-size: 24px;
-    font-weight: bold;
-    color: #645c5c;
-    text-align: center;
-    margin-bottom: 10px;
+    font-size: 2rem;
+    color: #333;
 }
 
 .next-con p {
     font-size: 14px;
-    line-height: 1.6;
+    color: #0070f3;
+    font-family: 'Lucida Sans';
+}
+
+/* Image.module.css */
+.nuxt-section {
+    display: flex;
     align-items: center;
+    justify-content: center;
+    padding: 50px;
+    margin-bottom: 5%;
+    background-color: #f9f9f9;
+}
+
+.nuxt-content {
+    max-width: 600px;
+    margin-right: 20px;
+    text-align: left;
+}
+
+.nuxt-content h1 {
+    font-size: 2rem;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.nuxt-content h4 {
+    font-size: 2rem;
+    color: #333;
+}
+
+.nuxt-content p {
+    font-size: 1rem;
+    color: #0070f3;
+    font-family: 'Lucida Sans';
+    margin-bottom: 40px;
+}
+
+.n-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.n-card {
+    flex: 1 1 45%;
+    max-width: 200px;
+    background-color: #fff;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     text-align: center;
-    color: #212421;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.n-card:hover {
+    background-color: #69a5e6;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.n-icon {
+    font-size: 2rem;
+    color: #4A90E2;
+    margin-bottom: 15px;
+}
+
+.n-card h3 {
+    font-size: 1rem;
+    color: #333;
+}
+
+.n-image img {
+    max-width: 80%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.n-next {
+    align-items: center;
+    margin: 5% auto;
+    display: flex;
+    justify-content: center;
+}
+
+.n-next img {
+    max-width: 40%;
+    max-height: 40%;
+    border-radius: 8px;
+}
+
+
+.nuxt-describs {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: right;
+    background-color: #f9f9f9;
+    margin-bottom: 5%;
+}
+
+.n-img {
+    max-width: 80%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.nt-img img {
+    max-width: 80%;
+    max-height: 50%;
+    border-radius: 8px;
+}
+
+.n-des {
+    max-width: 800px;
+    flex: 1;
+    padding: 20px;
+    text-align: center;
+}
+
+.n-des h1 {
+    font-size: 2rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 20px;
+}
+
+.n-des p {
+    font-size: 14px;
+    line-height: 1.6;
+    color: #0070f3;
+    font-family: 'Lucida Sans';
+    margin-bottom: 20px;
 }
