--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,365 +1,3 @@
-/* Home component CSS */
-.home-back {
-  background-color: #fdfbfb;
-  padding: 50px 0;
-}
-
-.content-info {
-  color: #0a5783;
-}
-
-.infotech {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #f5f5f5;
-  padding: 30px;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  margin: 20px 0;
-}
-
-
-
-.infotech span {
-  font-size: 1.3rem;
-  color: black;
-  margin-bottom: 20px;
-}
-
-.infotech h5 {
-  font-size: 2rem;
-  color: black;
-  margin-bottom: 20px;
-}
-
-.infotech h1 {
-  font-size: 3rem;
-  color: black;
-  margin-bottom: 20px;
-}
-
-.infotech p {
-  font-size: 1.1rem;
-  color: #555;
-  margin-bottom: 30px;
-  line-height: 1.6;
-}
-
-
-
-.stats {
-  display: flex;
-  gap: 30px;
-  margin-top: 20px;
-  justify-content: flex-start;
-}
-
-.stat {
-  background-color: #ffffff;
-  padding: 15px;
-  text-align: center;
-  border-radius: 8px;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  flex: 1;
-}
-
-.stat i {
-  font-size: 2rem;
-  color: #007bff;
-  margin-bottom: 10px;
-}
-
-.stat p {
-  font-size: 1rem;
-  font-weight: bold;
-  color: #333;
-}
-
-
-.read-more-btn {
-  margin-top: 30px;
-  padding: 10px 25px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  font-size: 1rem;
-}
-
-.read-more-btn:hover {
-  background-color: #0056b3;
-}
-
-.home-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-.content-section {
-  text-align: center;
-  padding: 20px;
-}
-
-.content-section h1 {
-  font-size: 2.5rem;
-  color: #333;
-  margin-bottom: 20px;
-}
-
-.image-section img.banner {
-  width: 100%;
-  height: auto;
-  max-width: 500px;
-  margin: 0 auto;
-}
-
-.cards-section {
-  margin-top: 50px;
-  text-align: center;
-}
-
-.cards-section h2 {
-  font-size: 2rem;
-  color: #333;
-}
-
-.card-manage {
-  color: #0a5783;
-  font-size: 3rem;
-}
-
-.card-service {
-  color: #0fa735;
-  font-size: 3rem;
-}
-
-.card-security {
-  color: #361a9c;
-  font-size: 3rem;
-}
-
-.card-conslt {
-  color: #c71515;
-  font-size: 3rem;
-}
-
-.cards-container {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-  margin-top: 20px;
-}
-
-
-.card {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 250px;
-
-  padding: 20px;
-  text-align: center;
-  transition: transform 0.3s;
-}
-
-
-
-.card h3 {
-  margin-top: 15px;
-  font-size: 1.5rem;
-  color: #555;
-}
-
-.card p {
-  color: #777;
-  font-size: 1rem;
-}
-
-/* Offering section */
-.container {
-  display: flex;
-  justify-content: space-between;
-  margin: 50px 0;
-}
-
-.text-container h2 {
-  font-size: 2rem;
-  color: #333;
-}
-
-.text-container p {
-  color: #777;
-  font-size: 1.1rem;
-  margin: 15px 0;
-}
-
-.text-strong strong {
-  font-size: 1.1rem;
-  color: #333;
-}
-
-.service-cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  margin-top: 20px;
-}
-
-.service-card {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  width: 220px;
-  text-align: center;
-}
-
-.service-icon {
-  font-size: 2.5rem;
-  color: #2b6a9e;
-}
-
-.service-card h3 {
-  font-size: 1.5rem;
-  margin-top: 15px;
-  color: #333;
-}
-
-.service-card p {
-  color: #777;
-  font-size: 1rem;
-}
-
-/* Technology section */
-.tech-stack-section {
-  margin: 50px 0;
-  text-align: center;
-}
-
-.tech-stack-section h4 {
-  font-size: 1.5rem;
-  color: #555;
-  margin-bottom: 10px;
-}
-
-.tech-stack-section h3 {
-  font-size: 2rem;
-  color: #333;
-  margin-bottom: 30px;
-}
-
-.tech-cards-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.tech-card {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  width: 150px;
-  text-align: center;
-  transition: transform 0.3s;
-}
-
-
-.tech-card h3 {
-  font-size: 1.2rem;
-  color: #333;
-  margin-top: 15px;
-}
-
-.tech-react {
-  font-size: 4rem;
-  color: #61DAFB;
-}
-
-.tech-node {
-  font-size: 4rem;
-  color: #83cd29;
-}
-
-.tech-docker {
-  font-size: 4rem;
-  color: #2496ED;
-}
-
-.tech-next {
-  font-size: 4rem;
-  color: #060607;
-}
-
-.tech-css {
-  font-size: 4rem;
-  color: #264de4;
-
-}
-
-.tech-nestjs {  transform: scale(1.07);
-  font-size: 4rem;
-  color: #E0234E;
-}
-
-.tech-php {
-  font-size: 4rem;
-  color: #787CB5;
-}
-
-.tech-angular {
-  font-size: 4rem;
-  color: #DD0031;
-}
-
-.tech-vuejs svg {
-  font-size: 4rem;
-  color: #42b883;
-}
-
-.tech-typscript {
-  font-size: 4rem;
-  color: #3178C6;
-}
-
-.tech-laravel {
-  font-size: 4rem;
-  color: #FF2D20;
-  transition: color 0.3s ease, transform 0.3s ease;
-}
-
-.python {
-  width: 30%;
-}
-
-.tech-card img.python {
-  width: 60px;
-  height: 60px;
-}
-
-/* Responsive adjustments */
-@media (max-width: 768px) {
-
-  .cards-container,
-  .service-cards,
-  .tech-cards-container {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .container {
-    flex-direction: column;
-  }
-}
-
-
-
-
-
 /* General Reset */
 * {
   margin: 0;
@@ -388,8 +26,6 @@ body {
   flex-wrap: wrap;
   margin-bottom: 10%;
 }
-
-
 
 .hero-content {
   margin-top: 5%;
@@ -447,86 +83,7 @@ body {
   color: #000;
 }
 
-/* Stats Section */
-.stats-section {
-  display: flex;
-  justify-content: center;
-  flex: 1;
-}
-
-.stats {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  max-width: 900px;
-  flex-wrap: wrap;
-  gap: 20px;
-}
-
-.stats div {
-  background-color: white;
-  text-align: center;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-  flex-basis: calc(30.33% - 40px);
-  max-width: 200px;
-}
-
-
-
-.stats .icon {
-  font-size: 2rem;
-  color: #412583;
-  margin-bottom: 10px;
-}
-
-.stats .icon-team {
-  font-size: 2rem;
-  color: #1e632f;
-  margin-bottom: 10px;
-}
-
-.stats .icon-project {
-  font-size: 2rem;
-  color: #851d1d;
-  margin-bottom: 10px;
-}
-
-.stats h2 {
-  font-size: 2rem;
-  color: #333;
-}
-
-.stats p {
-  font-size: 12px;
-  color: #666;
-}
-
-
-.content-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-}
-
-.image-section {
-  width: 100%;
-  background: transparent;
-  max-width: 600px;
-  margin: 20px 0;
-}
-
-.banner {
-  width: 100%;
-  height: auto;
-  object-fit: cover;
-}
-
-
+/*expertise*/
 
 .cards-section {
   margin-top: 10%;
@@ -591,6 +148,8 @@ body {
   font-size: 12px;
 }
 
+
+/**/
 /* Offering section */
 .container {
   display: flex;
@@ -600,33 +159,33 @@ body {
   margin: 50px 0;
 }
 
-.text-container h2 {
+.home-container h1 {
   font-size: 2rem;
   margin-left: 20px;
   color: #5a6df8;
 }
 
-.text-container p {
-  color: #777;
-  font-size: 1.1rem;
+.home-container h4 {
+  font-size: 1rem;
   margin-left: 20px;
-
+  color: #000000;
 }
 
+
 .text-strong strong {
-  font-size: 1.1rem;
+  font-size: 1em;
   color: #333;
   margin-left: 20px;
 }
 
-.service-cards {
+.home-cards {
   display: flex;
   gap: 20px;
   align-items: flex-start;
   padding: 20px;
 }
 
-.service-card {
+.home-card {
   margin-top: 20px;
   background-color: #f9f9f9;
   border-radius: 10px;
@@ -637,20 +196,20 @@ body {
 }
 
 
-.service-icon {
-  font-size: 50px;
+.home-icon {
+  font-size: 40px;
   margin-right: 90%;
   color: #175699;
   margin-bottom: 15px;
 }
 
-.service-card h3 {
+.home-card h3 {
   font-size: 1.2rem;
   text-align: left;
   margin-bottom: 10px;
 }
 
-.service-cards p {
+.home-cards p {
   text-align: left;
   margin-left: 0;
   font-size: 12px;
@@ -662,126 +221,108 @@ body {
 
 /* Technology section */
 .tech-stack-section {
+  padding: 40px 50px;
+  background-color: #f5f5f5;
+  text-align: center;
+}
+
+.tech-con h4 {
+  font-size: 14px;
+  color: #0b6fda;
+  font-family: 'Lucida Sans';
+  margin-bottom: 3%;
+}
+
+
+.tech-cards-cont {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-wrap: wrap;
   justify-content: center;
-  padding: 20px;
   gap: 20px;
 }
 
-.tech-stack-section h4 {
-  font-size: 1rem;
-  color: #3449a5;
-  margin-bottom: 10px;
-}
-
-.tech-stack-section h3 {
-  font-size: 2rem;
-  color: #333;
-  margin-bottom: 30px;
-}
-
 .tech-card {
+  max-width: 150px;
+  padding: 20px 10px;
   background-color: #fff;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  margin: 0 15px;
-  width: 150px;
-  height: 150px;
-  padding: 30px;
-  cursor: pointer;
-  top: 100px;
-  left: 50px;
-  z-index: 999;
   align-items: center;
-
-}
-
-.tech-stack-section {
-  text-align: center;
-}
-
-.tech-cards-inline {
-  display: flex;
-  justify-content: center;
-
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
 .tech-card h3 {
-  font-size: 1rem;
-  margin-top: 8px;
+  margin-top: 10px;
   font-size: 1rem;
   color: #333;
-
 }
 
 .tech-react {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #61DAFB;
 }
 
 .tech-node {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #83cd29;
 }
 
 .tech-docker {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #2496ED;
 }
 
 .tech-next {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #060607;
 }
 
 .tech-css {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #264de4;
 
 }
 
 .tech-nestjs {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #E0234E;
 }
 
 .tech-php {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #787CB5;
 }
 
 .tech-angular {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #DD0031;
 }
 
-.tech-vuejs svg {
-  font-size: 4rem;
+.tech-vuejs {
+  font-size: 3rem;
   color: #42b883;
 }
 
 .tech-typscript {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #3178C6;
 }
 
 .tech-laravel {
-  font-size: 4rem;
+  font-size: 3rem;
   color: #FF2D20;
   transition: color 0.3s ease, transform 0.3s ease;
 }
 
 .python {
-  width: 20%;
+  width: 30%;
 }
 
 .tech-card img.python {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
 }
 
 
@@ -851,13 +392,13 @@ p {
 }
 
 h4 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   color: #0056b3;
   margin-bottom: 10px;
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   margin-bottom: 20px;
 }
 
@@ -1058,11 +599,10 @@ h1 {
   margin: 80px auto;
 }
 
-.icon {
+.micon {
   margin-top: 20px;
   margin-bottom: 20px;
   color: #0375f0;
-
   -webkit-text-fill-color: transparent;
 }
 
@@ -1217,3 +757,30 @@ h1 {
     width: 20%;
   }
 }
+
+
+
+/* Medium and Large Screens */
+@media (min-width: 768px) {
+  .s-counter-list {
+    flex: 1 1 30%;
+    max-width: none;
+  }
+}
+
+/* Small Screens */
+@media (max-width: 767px) {
+  .s-counter-area {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .s-counter-list h2 {
+    font-size: 1.5em;
+  }
+
+  .s-counter-list p {
+    font-size: 0.9em;
+  }
+}
+
