--- a/src/style/about.css
+++ b/src/style/about.css
@@ -1,57 +1,6 @@
 /* about us */
 
 
-.image-sections {
-  width: 100%;
-  height: 500px;
-  display: flex;
-  background-size: cover;
-  background-position: center;
-
-}
-
-.image-sections img {
-  width: 200%;
-  height: 100;
-  object-fit: cover;
-}
-
-.image-sections::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgb(50, 95, 147);
-  opacity: 0.5;
-}
-
-.about-text {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: #fff;
-}
-
-.about-text a {
-  margin-inline: 50px;
-  color: #fff;
-  font-size: 20px;
-  text-decoration: none;
-  font-weight: normal;
-
-}
-
-.about-text span {
-  color: #fff;
-  font-size: 20px;
-  font-weight: normal;
-
-}
-
 .about-page-container {
   width: 1100px;
   display: flex;
@@ -100,32 +49,31 @@
 .abouts-section p {
   font-size: 18px;
   text-align: start;
+  padding-top: 20px;
 
 }
 
 .slice-container {
   width: 500px;
-  margin: 47px;
-  padding: 20px;
+  margin: -9px;
+  padding: 56px;
   background-color: #fff;
 }
 
 .box-containers {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 5px;
-  padding-top: 100px;
-  margin: -57px;
+  grid-auto-rows: 1fr;
+  grid-gap: -34px;
+  padding-top: 80px;
+  margin: 57px;
+  margin-right: -13px;
   width: 600px;
   height: 00px;
   position: relative;
-  background-color: #fff;
+
 }
 
-.box-section {
-  margin: 20px;
-  padding: 20px;
-}
 
 .box1,
 .box2,
@@ -157,9 +105,7 @@
   cursor: pointer;
   position: absolute;
 }
-
-
-.image-text {
+  .image-text {
   position: absolute;
   top: 40%;
   left: 31%;
@@ -180,18 +126,19 @@
   margin: 20px;
 }
 
-.client-count span {
+.client-count h2 {
   font-size: 40px;
   font-weight: bold;
   color: #2b6a9e;
   margin-bottom: 10px;
 }
 
-.client-count h4 {
+.client-count p {
 
   font-size: 20px;
   font-weight: bold;
   margin-top: 10px;
+  color: #2b6a9e;
 }
 
 .pro-header {
@@ -266,6 +213,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-top: 20px;
   font-weight: 600;
   font-size: 25px;
   line-height: 1.4;
@@ -288,7 +236,7 @@
   font-size: 20px;
   text-align: center;
   padding: 10px 20px;
-  margin: 5px 560px;
+  margin: 25px 560px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -344,7 +292,7 @@
 
 .react-icon {
   font-size: 50px;
-  height: 50px;
+  height: 40px;
   position: absolute;
   top: -30px;
   left: -150px;
@@ -354,7 +302,7 @@
 
 .react-icon1 {
   font-size: 50px;
-  height: 50px;
+  height: 60px;
   position: absolute;
   top: 140px;
   left: -120px;
@@ -364,7 +312,7 @@
 
 .react-icon2 {
   font-size: 50px;
-  height: 50px;
+  height: 60px;
   position: absolute;
   top: -30px;
   right: -150px;
@@ -374,7 +322,7 @@
 
 .react-icon3 {
   font-size: 50px;
-  height: 50px;
+  height: 60px;
   position: absolute;
   top: 140px;
   right: -100px;
@@ -388,8 +336,11 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 0px;
-  margin: 20px;
+  margin: 70px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
   justify-content: center;
+
 
 }
 
@@ -403,9 +354,6 @@
 
 }
 
-.counter-list:hover {
-  cursor: pointer;
-}
 
 .counter-list h2 {
   font-size: 50px;
