--- a/src/style/about.css
+++ b/src/style/about.css
@@ -103,7 +103,7 @@
 .box4 img:hover {
   opacity: 0.9;
   cursor: pointer;
-  position: absolute;
+  position:relative;
 }
   .image-text {
   position: absolute;
