--- a/src/style/company.css
+++ b/src/style/company.css
@@ -25,17 +25,8 @@
 
 .mission-content, .vision-content, .value-content {
   margin-bottom: 20px;
-  opacity: 1;
-  transform: translateY(20px);
-  transition: opacity 0.5s, transform 0.5s;
 }
-
-.mission-content.animate, .vision-content.animate, .value-content.animate {
-  opacity: 0  ;
-  transform: translateY(0);
-}
-
-  .mission-content p, .vision-content p {
+.mission-content p, .vision-content p {
     font-size: 18px;
     line-height: 1.6;
     color: black;
@@ -147,14 +138,88 @@
   flex-direction: column;
   align-items: center;
   margin-right: 20px;
-  margin: 10px;
   padding: 10px;
   border: 1px solid #ddd;
   border-radius: 10px;
-  box-shadow: 0 0 10px #0000001a;
+  box-shadow: 0 0 20px #0000001a;
   width: calc(20% - 10px);
+  transition: background-color 0.5s ease-in-out;
 
 }
+
+.hire-step:hover{
+    cursor: pointer;
+    background-color: #86aecf;
+}
+
 .hire-step p{
     font-weight: 400;
 }
+
+.h-icon{
+  color: #2b6a9e;
+  font-size: 40px;
+}
+
+/*faq page*/
+
+
+.fa-section {
+  text-align: center;
+  margin-bottom: 30px;
+  margin-top: 10px;
+}
+.fa-section h3{
+  color: #2b6a9e;
+}
+    
+.fa-section h2 {
+  font-size: 36px;
+  color: #333;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+.faq-container {
+  padding: 20px;
+  max-width: 800px;
+  margin: auto;
+}
+
+.faq-steps {
+  display: flex;
+  flex-direction: column;
+}
+
+.faq-step {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin: 10px 0;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease-in-out;
+  cursor: pointer;
+}
+
+.faq-step:hover {
+  background-color: #f7f7f7;
+}
+
+.faq-icon {
+  color: #2b6a9e;
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.faq-step h3 {  
+  margin: 0;
+  color: #333;
+}
+
+.faq-step p {
+  margin-top: 10px;
+  color: #555;
+}               
