--- a/src/style/about.css
+++ b/src/style/about.css
@@ -13,25 +13,6 @@
   margin: 40 px;
 }
 
-.dividers {
-  text-align: center;
-}
-
-.dividers h1 {
-  position: relative;
-  display: inline-block;
-}
-
-.dividers h1:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 2px;
-  background-color: #333;
-  left: 0;
-  bottom: -10px;
-}
-
 .abouts-section h1 {
   color: #2b6a9e;
   text-align: center;
@@ -59,61 +40,69 @@
   padding: 56px;
   background-color: #fff;
 }
-
 .box-containers {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 1fr;
-  grid-gap: -34px;
+  grid-auto-rows: 300px;
+  grid-gap: 20px;
   padding-top: 80px;
   margin: 57px;
   margin-right: -13px;
   width: 600px;
-  height: 00px;
-  position: relative;
-
+  height: 100%; 
 }
 
-
-.box1,
-.box2,
-.box3,
-.box4 {
+.box1, .box2, .box3, .box4 {
   padding: 10px;
   width: 100%;
   height: 100%;
   margin-top: 30px;
-  position: relative;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  color: #fff; 
+  background-size: cover;
+  background-position: center;
+  text-align: center; 
 }
 
-.box1 img,
-.box2 img,
-.box3 img,
-.box4 img {
-  width: 90%;
-  height: 90%;
-  position: relative;
-
-
+.box1 {
+  background-image: url('../assets/img/box-1.png');
 }
 
-.box1 img:hover,
-.box2 img:hover,
-.box3 img:hover,
-.box4 img:hover {
-  opacity: 0.9;
-  cursor: pointer;
-  position:relative;
+.box2 {
+  background-image: url('../assets/img/box-2.png');
 }
-  .image-text {
-  position: absolute;
-  top: 40%;
-  left: 31%;
-  transform: translate(-29%, -31%);
-  color: #fff;
-  font-size: 30px;
-  font-weight: bold;
+
+.box3 {
+  background-image: url('../assets/img/box-3.png');
 }
+
+.box4 {
+  background-image: url('../assets/img/box-4.png');
+}
+
+.bx-overlay {
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(16, 94, 238, 0.2); 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
+  opacity: 0; 
+}
+
+.box1:hover .bx-overlay,
+.box2:hover .bx-overlay,
+.box3:hover .bx-overlay,
+.box4:hover .bx-overlay {
+  opacity: 1; 
+}
+
 
 .row-container {
   display: flex;
@@ -250,87 +239,78 @@
 
 
 .about-section {
+  margin: auto;
   width: 100%;
-  height: 500px;
-  margin-top: 60px;
-  display: flex;
+  height: 70vh;
+  background-image: url('../assets/img/about1.jpg');
   background-size: cover;
-  position: relative;
+  background-position: center;
+  margin-bottom: 5%;
 
 }
 
-.about-section img {
-  width: 200%;
-  height: 90%;
-  object-fit: cover;
-}
-
-.about-section::before {
-  content: "";
-  position: absolute;
-  top: 0;
+.ab-overlay {
   left: 0;
   width: 100%;
-  height: 90%;
-  background-color: rgb(50, 95, 147);
-  opacity: 0.7;
+  height: 100%;
+  background-color: rgba(88, 100, 231, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  text-align: center;
 }
-
-.abouts-text {
-  position: absolute;
+.abouts-text h2{
+  display: flex;
+  margin: auto;
   top: 40%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  justify-content: center;
   text-align: center;
   color: #fff;
 }
 
 .abouts-text p {
-  font-size: 20px;
-  font-weight: bold;
+  font-size: 18px;
+  margin: auto;
+  top: 60%;
+  left: 50%;
+  font-weight: normal;
+}
+.react-icons {
+  display: flex; 
+  justify-content: center;
+  align-items: center; 
+  margin-top: 20px; 
+  
 }
 
-.react-icon {
-  font-size: 50px;
-  height: 40px;
-  position: absolute;
-  top: -30px;
-  left: -150px;
-  color: #1a5d8e;
-  background-color: #fff;
-}
-
-.react-icon1 {
-  font-size: 50px;
+.react-icons .react-icon1, .react-icon2,.react-icon3, .react-icon4 {
+  font-size: 2rem; 
   height: 60px;
-  position: absolute;
-  top: 140px;
-  left: -120px;
-  color: #1a5d8e;
-  background-color: #fff;
-}
-
-.react-icon2 {
-  font-size: 50px;
-  height: 60px;
-  position: absolute;
-  top: -30px;
-  right: -150px;
-  color: #1a5d8e;
-  background-color: #fff;
-}
-
-.react-icon3 {
-  font-size: 50px;
-  height: 60px;
-  position: absolute;
-  top: 140px;
-  right: -100px;
-  color: #1a5d8e;
-  background-color: #fff;
+  width: 60px; 
+  color: #1a5d8e; 
+  background-color: #fff; 
+  border-radius: 50%; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  margin: 10px; 
+  transition: transform 0.3s; 
 }
 
 
+
+
+.react-icons 
+.react-icon1:hover, 
+.react-icon2:hover,
+.react-icon3:hover,
+.react-icon4:hover 
+{
+  transform: scale(1.1);
+  cursor: pointer; 
+}
 
 .counter-area {
   display: flex;
@@ -368,4 +348,64 @@
   font-weight: bold;
   text-align: center;
   justify-content: center;
+}
+
+.scrollup {
+  position: fixed;
+  right: 20px;
+  width: 40px;
+  bottom: 50px;
+  line-height: 36px;
+  z-index: 1000;
+  cursor: pointer;
+  transform: translateY(100%);
+}
+
+.scrollup.show {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.up-icon {
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #1a76b8;
+}
+
+
+/* Media Queries for Responsiveness */
+@media (max-width: 768px) {
+  .about-page-container {
+    margin: 20px 10px; 
+  }
+
+  .client-count h2 {
+    font-size: 30px; 
+  }
+
+  .process-step {
+    width: 100%; 
+  }
+
+  .btn-contact {
+    margin: 20px auto; 
+    width: 100%; 
+  }
+}
+
+@media (max-width: 480px) {
+  .abouts-section h1 {
+    font-size: 24px; 
+  }
+
+  .abouts-section h2 {
+    font-size: 20px; 
+  }
+
+  .abouts-section p {
+    font-size: 16px; 
+  }
 }
