--- a/src/style/frontend.css
+++ b/src/style/frontend.css
@@ -118,7 +118,6 @@
 .web-dev {
     margin-top: 10%;
     padding: 40px;
-    background-color: #f8f9fa;
     text-align: center;
     color: #333;
     margin-bottom: 5%;
@@ -161,17 +160,17 @@
 
 
 .web-dservice-icon {
-    font-size: 2rem;
-    color: #0056b3;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    background-color: white;
-    margin: 0 auto 15px;
-
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
+    font-size: 2rem;
 }
 
 .web-service-card h3 {
@@ -222,7 +221,6 @@
     margin: 30px;
 }
 
-
 /*e-commerce content*/
 .e-services-container {
     max-width: 1000px;
@@ -264,7 +262,17 @@
 }
 
 .e-icon {
-    color: #0056b3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
+    font-size: 1rem;
 }
 
 .e-service h3 {
@@ -316,9 +324,17 @@
 }
 
 .a-icon {
-    margin-right: 15px;
-    color: #007bff;
-    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
+    font-size: 1rem;
 }
 
 .a-service h3 {
@@ -420,9 +436,17 @@
 }
 
 .ty-icon {
-    font-size: 3rem;
-    color: #007acc;
-    margin-bottom: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
+    font-size: 1rem;
 }
 
 .ty-card h3 {
@@ -505,11 +529,18 @@
     background-color: #ffffff;
 }
 
-
 .icon-ty {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
     font-size: 2rem;
-    color: #3498db;
-    margin-bottom: 12px;
 }
 
 .service-card-ty h3 {
@@ -551,7 +582,6 @@
 
 }
 
-
 /*react js contants*/
 .react-container {
     padding: 20px;
@@ -587,7 +617,6 @@
     gap: 20px;
 }
 
-
 .react-card {
     background-color: #fff;
     border-radius: 10px;
@@ -599,18 +628,24 @@
 }
 
 .react-icon {
-    font-size: 2.5rem;
-    color: #1167c2;
-    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
+    font-size: 1rem;
 }
-
 
 .react-title {
     font-size: 14px;
     color: #333;
     margin-bottom: 10px;
 }
-
 
 .react-description {
     font-size: 13px;
@@ -622,10 +657,9 @@
     display: flex;
     align-items: center;
     padding: 40px;
-    background-color: #f5f5f5;
     border-radius: 10px;
     margin-bottom: 5%;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
 }
 
 .react-image__img {
@@ -699,10 +733,18 @@
     color: #333;
 }
 
-
 .rr-icon {
-    color: #0056b3;
-    font-size: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
+    font-size: 2rem;
 }
 
 .js-text {
@@ -731,7 +773,6 @@
 /*vue js  development*/
 .vue-container {
     margin: 40px auto;
-    background-color: #f5f5f5;
     text-align: center;
 }
 
@@ -759,14 +800,23 @@
 }
 
 .vue-icon {
-    font-size: 24px;
-    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
+    font-size: 1.5rem;
 }
 
 .vue-title {
     font-weight: bold;
     margin-bottom: 10px;
-    color: #007acc;
+    color: #473f3f;
     font-family: Georgia;
 }
 
@@ -783,8 +833,6 @@
     border-radius: 8px;
 }
 
-
-
 .vue-p {
     font-size: 1.2rem;
     color: #333;
@@ -796,8 +844,6 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
-
-
 }
 
 .vue-img {
@@ -818,7 +864,7 @@
 
 .vue-p {
     font-size: 14px;
-    color: #072dda;
+    color: rgb(49, 40, 175);
     margin-top: 10px;
     font-family: 'Lucida Sans';
     text-align: center;
@@ -826,18 +872,15 @@
 
 /*next js  devlopments css*/
 .next-image {
-    background-color: #f8f9fa;
     padding: 40px;
     display: flex;
     border-radius: 10px;
-    box-shadow: 0 4px 20px rgba(80, 79, 79, 0.1);
     text-align: center;
     justify-content: center;
     margin: 20px auto;
     gap: 20px;
     margin-bottom: 5%;
 }
-
 
 .next-image__img {
     flex: 0 0 300px;
@@ -865,11 +908,10 @@
 
 .next__content li {
     font-size: 14px;
-    color: #0070f3;
+    color: rgb(49, 40, 175);
     line-height: 1.6;
     font-family: 'Lucida Sans';
     margin-bottom: 10px;
-
 }
 
 .next__content li::before {
@@ -880,12 +922,10 @@
 }
 
 /*next js  services*/
-
 .nextjs-services {
     padding: 20px;
-    background-color: #f8f9fa;
     font-family: Arial, sans-serif;
-    margin-bottom: 5%;
+    margin-bottom: 3%;
 }
 
 .next-list {
@@ -894,7 +934,7 @@
 }
 
 .next-list h3 {
-    color: #0070f3;
+    color: rgb(49, 40, 175);
     font-size: 20px;
     margin-bottom: 10px;
 }
@@ -923,9 +963,17 @@
 }
 
 .next-card .icon {
-    font-size: 30px;
-    color: #0070f3;
-    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
+    font-size: 1rem;
 }
 
 .next-card h3 {
@@ -953,7 +1001,7 @@
 
 .next-con p {
     font-size: 14px;
-    color: #0070f3;
+    color: rgb(49, 40, 175);
     font-family: 'Lucida Sans';
 }
 
@@ -986,7 +1034,7 @@
 
 .nuxt-content p {
     font-size: 1rem;
-    color: #0070f3;
+    color: rgb(49, 40, 175);
     font-family: 'Lucida Sans';
     margin-bottom: 40px;
 }
@@ -1014,9 +1062,17 @@
 }
 
 .n-icon {
-    font-size: 2rem;
-    color: #4A90E2;
-    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: #eff6fa;
+    color: rgb(49, 40, 175);
+    margin: 0 auto 10px auto;
+    padding: 10px;
+    font-size: 1rem;
 }
 
 .n-card h3 {
@@ -1042,7 +1098,6 @@
     max-height: 40%;
     border-radius: 8px;
 }
-
 
 .nuxt-describs {
     display: flex;
@@ -1082,7 +1137,7 @@
 .n-des p {
     font-size: 14px;
     line-height: 1.6;
-    color: #0070f3;
+    color: rgb(49, 40, 175);
     font-family: 'Lucida Sans';
     margin-bottom: 20px;
 }
